<resources>
    <string name="app_name">Web3 Store</string>
    <string name="title_apps">Apps</string>
    <string name="title_games">Games</string>
    <string name="title_comics">Comics</string>
    <string name="supply_chain_heading">Supply Chain Apps</string>
    <string name="social_media_heading">Social Media Apps</string>
    <string name="defi_heading">DeFi Protocol Apps</string>
    <string name="trading_heading">Trading Apps</string>
    <string name="nft_heading">NFT Apps</string>
    <string name="developer_name">Google Inc</string>
    <string name="get_app">Get</string>
    <string name="image_icon_content">App Icon</string>
</resources>