<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.web3.store.ui.home.HomeFragment"
        android:label="@string/title_apps"
        tools:layout="@layout/fragment_app" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.web3.store.ui.dashboard.DashboardFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.web3.store.ui.notifications.NotificationsFragment"
        android:label="@string/title_comics"
        tools:layout="@layout/fragment_notifications" />
</navigation>