<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:text="@string/supply_chain_heading"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold"
            />
            <FrameLayout
                android:id="@+id/supply_chain"
                android:layout_width="match_parent"
                android:layout_height="133dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:text="@string/social_media_heading"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold"
            />
            <FrameLayout
                android:id="@+id/social_media"
                android:layout_width="match_parent"
                android:layout_height="400dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:text="@string/defi_heading"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold"
            />
            <FrameLayout
                android:id="@+id/de_fi"
                android:layout_width="match_parent"
                android:layout_height="266dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:text="@string/trading_heading"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold"
            />
            <FrameLayout
                android:id="@+id/trading"
                android:layout_width="match_parent"
                android:layout_height="266dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="10dp"
            android:text="@string/nft_heading"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold"
            />
            <FrameLayout
                android:id="@+id/nft"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                />
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>